fixes to aurelia example, added frogotten dependency lodash.difference, added some first react example code, not finished yet

--- a/test/e2e-smoketest/angular/index-angular.html
+++ b/test/e2e-smoketest/angular/index-angular.html
@@ -80,6 +80,7 @@
 </div>
 
 <script src="jspm_packages/system.js"></script>
+<script src="config.js"></script>
 <script src="config-angular.js"></script>
 <script type="text/javascript">
     System.import('app-angular').then(function() {
