--- a/test/e2e-smoketest/aurelia/index-aurelia.html
+++ b/test/e2e-smoketest/aurelia/index-aurelia.html
@@ -6,6 +6,7 @@
 </head>
 <body aurelia-app>
 <script src="jspm_packages/system.js"></script>
+<script src="config.js"></script>
 <script src="config-aurelia.js"></script>
 <script>
 	System.import('aurelia-bootstrapper').catch(console.error.bind(console));
